compiler/tests/compiler/must_fail/t_09.mil
fn foo(x : stack u64) -> stack u64 * stack u64 {
  return x;
}

/*
START:CMD
ARG="print[input]"
END:CMD
*/
